# blue_horizon

./: .gitattributes  .gitignore  README.md  clean_data.py  db.sqlite3  docker-compose.yml  init.ps1  init.sh  launch.ps1  launch.sh  package-lock.json  package.json  pyproject.toml  runModel.sh  waterdata_backup.dump
data/: AggregatedWaterData.csv
notebooks/: cleanImport.ipynb
startapp/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
startapp/api/: __init__.py  chat.py  data.py  ml.py  stats.py
startapp/migrations/: 0001_initial.py  0002_chatdata.py  0002_contactform_lang_alter_contactform_address_and_more.py
water/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
webapp/: .eslintrc.cjs  .gitconfig  .prettierignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  postcss.config.js  prettier.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
webapp/src/: App.vue  i18n.ts  main.ts  type.ts
webapp/src/assets/: base.scss  main.scss
webapp/src/assets/icons/: BarGraph.vue  Chemicals.vue  MapPin.vue  MissingData.vue  Percentage.vue  Proportion.vue  Sample.vue  WebDomain.vue
webapp/src/assets/reusable/: BarChart.vue  DonutChart.vue  SelectOption.vue
webapp/src/router/: index.ts
webapp/src/views/: ChatView.vue  Dashboard.vue  DashboardView.vue  Europe.vue  EuropeMap.vue  HelloWorld.vue  Home.vue  HomePage.vue  HomeView.vue  MachineLearningView.vue  Map.vue  MapView.vue  PipelineDetailsView.vue  generate-map.ts
webapp/webapp/: package-lock.json  package.json
(+31 files in other folders)
